# MediaPlayer-App

./: CMakeLists.txt  Playlists.txt  README.md
inc/: Controller.h  FilePlayer.h  HTTPPlayer.h  MediaPlayer.h  MessageQueue.h  Player.h
src/: Controller.cpp  FilePlayer.cpp  HTTPPlayer.cpp  MediaPlayer.cpp  main.cpp
